MUSICardio 4.0.1:
- Fix Python module installation bug on macOS.
- Fix Real Time compilation on Ubuntu/Fedora/macOS and Windows.
- Fix a pop-up problem with wrongly imported pipeline scripts.

MUSICardio 4.0:
- Put back the Pipelines workspace.
MUSICardio 4 provides its own embedded Python 3.10 interpreter. This facilitates the development of Python scripts and components within the application. 
A Python console and plugin API will be added in an upcoming version. Contact us at music-dev@inria.fr to discuss how this Python integration can help you.
Check the Pipelines documentation to see if your scripts need to be updated: https://music-test.inria.fr/musicardio/ in Development menu, or you can ask the team to help you.
Main change: switch "from medPipelineObjectWrapper import *" and "from medPipeline import *" to "from mscPipeline import *".
- Toolboxes in the application have been updated to fit the new Pipelines system.
- We worked on the stability of the application concerning database connections and memory leaks.
- Fix Paint toolbox widgets when the user switches from Paint/Erase to Magic Wand or clear the view.
- Fix a freeze in PolygonROI toolbox if the user contours outside the image borders.
- Fix the "clear" button to effectivaly clear the view.
- Stop some toolboxes compatible with 3D data if the user is using 4D data.
- Small enhancement of the GUI of Histogram Analysis, and debug a crash leaving the toolbox without creating containers.
- Video: default frame rate a 24.
- DICOM: handle if the origin is missing.
- Switch to Fedora 37.

medInria 3.4:
- Fix an incorrect zoom for some data displayed in a view. The zoom is now calculated with x and y dims, and not z
- N4 Bias Correction process can stop now if the user wants to quit the application, it will stop at some algorithm checkpoints
- Reslice toolbox: changing the dimension of spacing parameters does not zoom one of the views